fix: upgrade deps
BREAKING CHANGE: move to @clearc2 scope

--- a/example/src/index.html
+++ b/example/src/index.html
@@ -1,12 +1,9 @@
 <html>
-  <head>
+<head>
     <title>C2 Form</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/styles.css"/>
-  </head>
-  <body>
-    <div id="app"/>
-   <script src="bundle.js" type="text/javascript"></script>
-  </body>
-</html>
+</head>
+<body>
+<div id="app"></div>
+</body>
